k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-api
  labels:
    app: cv-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-api
  template:
    metadata:
      labels:
        app: cv-api
    spec:
      containers:
      - name: api
        image: cvregistryfranck.azurecr.io/api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cv-api-service
spec:
  selector:
    app: cv-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
