k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-frontend
  labels:
    app: cv-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-frontend
  template:
    metadata:
      labels:
        app: cv-frontend
    spec:
      containers:
      - name: frontend
        image: cvregistryfranck.azurecr.io/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cv-frontend-service
spec:
  selector:
    app: cv-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
