k8s/pdf-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-pdf
  labels:
    app: cv-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-pdf
  template:
    metadata:
      labels:
        app: cv-pdf
    spec:
      containers:
      - name: pdf-generator
        image: cvregistryfranck.azurecr.io/cv-pdf-generator:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: cv-pdf-service
spec:
  selector:
    app: cv-pdf
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
