k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/pdf
        pathType: Prefix
        backend:
          service:
            name: cv-pdf-service
            port:
              number: 5001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cv-api-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cv-frontend-service
            port:
              number: 80
